--- a/.config.6.1.5
+++ b/.config.6.1.5
@@ -171,7 +171,7 @@ CONFIG_INITRAMFS_SOURCE=""
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
+CONFIG_RD_LZ4=y
 # CONFIG_RD_ZSTD is not set
 # CONFIG_BOOT_CONFIG is not set
 # CONFIG_INITRAMFS_PRESERVE_MTIME is not set
@@ -1269,6 +1269,7 @@ CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
+CONFIG_CRYPTO_ACOMP2=y
 # CONFIG_CRYPTO_MANAGER is not set
 # CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
 # CONFIG_CRYPTO_NULL is not set
@@ -1374,8 +1375,8 @@ CONFIG_CRYPTO_CRCT10DIF=y
 # CONFIG_CRYPTO_DEFLATE is not set
 # CONFIG_CRYPTO_LZO is not set
 # CONFIG_CRYPTO_842 is not set
-# CONFIG_CRYPTO_LZ4 is not set
-# CONFIG_CRYPTO_LZ4HC is not set
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
 # CONFIG_CRYPTO_ZSTD is not set
 # end of Compression
 
@@ -1480,7 +1481,11 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_LIBCRC32C is not set
 # CONFIG_CRC8 is not set
 # CONFIG_RANDOM32_SELFTEST is not set
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4HC_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
+CONFIG_DECOMPRESS_LZ4=y
 CONFIG_XARRAY_MULTI=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
@@ -1490,6 +1495,7 @@ CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_SWIOTLB=y
 # CONFIG_DMA_API_DEBUG is not set
+CONFIG_SGL_ALLOC=y
 # CONFIG_FORCE_NR_CPUS is not set
 # CONFIG_IRQ_POLL is not set
 CONFIG_HAVE_GENERIC_VDSO=y
