--- a/.config.6.1.5
+++ b/.config.6.1.5
@@ -369,7 +369,9 @@ CONFIG_ARCH_MHP_MEMMAP_ON_MEMORY_ENABLE=y
 # Power management and ACPI options
 #
 # CONFIG_SUSPEND is not set
-# CONFIG_PM is not set
+CONFIG_PM=y
+# CONFIG_PM_DEBUG is not set
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_ARCH_SUPPORTS_ACPI=y
 # CONFIG_ACPI is not set
 
@@ -547,6 +549,8 @@ CONFIG_BLOCK=y
 CONFIG_MSDOS_PARTITION=y
 CONFIG_EFI_PARTITION=y
 # end of Partition Types
+
+CONFIG_BLK_PM=y
 
 #
 # IO Schedulers
@@ -1211,7 +1215,7 @@ CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
-# CONFIG_PROC_CHILDREN is not set
+CONFIG_PROC_CHILDREN=y
 CONFIG_PROC_PID_ARCH_STATUS=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
